add post and get for groceryUsers

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,12 @@
 </head>
 
 <body>
+
+ <input id="testUser" type="text" placeholder="user index">
+ <button id="testSubmit" type="button" name="button">Fetch User</button>
+
  <div id="test">TEST</div>
+
 </body>
 
 </html>
