refactor main.js to output response data in console in correct order, need to figure out x

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
       <button type="submit" name="Add" class="btn btn-primary">Add</button>
     </form>
     <hr>
-
+    <div class="output"></div>
   </div>
 </body>
 
