add broken code for patching user item list

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
 <body>
 
  <input id="testUser" type="text" placeholder="user index">
+ <!-- <input id="testUserItem" type="text" placeholder="user item"> -->
  <button id="testSubmit" type="button" name="button">Fetch User</button>
 
  <div id="test">TEST</div>
